styles/components/mainWindow.scss
.swquiz-row {
  //width: 100%;
  display: grid;
  grid-template-columns: 0.3fr 0.7fr;
  grid-template-areas: 'swquiz-row-left swquiz-row-right';
  column-gap: 20px;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.swquiz-row-left {
  grid-area: swquiz-row-left;
}

.swquiz-row-right {
  grid-area: swquiz-row-right;
}

.swquiz-game {
  width: 100%;
  height: 100%;
  display: grid;

  grid-template-rows: 0.1fr 0.8fr 0.1fr;
  grid-template-columns: 0.5fr 0.5fr;
  grid-template-areas:
    'swquiz-game-header       swquiz-game-header'
    'swquiz-game-body         swquiz-game-body'
    'swquiz-game-footer-left  swquiz-game-footer-right'
    'swquiz-game-footer       swquiz-game-footer';
  row-gap: 2rem;
  column-gap: 2rem;
}

.swquiz-game-header {
  grid-area: swquiz-game-header;
}

.swquiz-game-body {
  grid-area: swquiz-game-body;
}

.swquiz-game-footer-left {
  grid-area: swquiz-game-footer-left;
}

.swquiz-game-footer-right {
  grid-area: swquiz-game-footer-right;
}

.swquiz-game-footer{
  grid-area: swquiz-game-footer;
}

@media (max-width: 768px){
  .swquiz-row{
    display: inline;
  }
  #swquiz-body {
    display: flex;
    flex-direction: column-reverse;
  }
}

